--- a/welcome.html
+++ b/welcome.html
@@ -21,8 +21,9 @@
             muted 
             loop 
             playsinline
-            preload="metadata"
+            preload="auto"
             poster="assets/logo.png.png"
+            style="width: 100%; height: 100%; object-fit: cover;"
         >
             <source src="assets/SPECTER VID3.mp4" type="video/mp4">
             Your browser does not support the video tag.
@@ -73,6 +74,11 @@
             
             video.addEventListener('error', function(e) {
                 console.error('Error loading video:', e);
+                // Try to load the video again
+                video.load();
+                video.play().catch(function(error) {
+                    console.error('Error playing video after reload:', error);
+                });
             });
             
             // Force video play with error handling
@@ -82,6 +88,10 @@
                     console.log('Video playing successfully');
                 }).catch(error => {
                     console.error('Error playing video:', error);
+                    // Try to play again after a short delay
+                    setTimeout(() => {
+                        video.play().catch(e => console.error('Error playing video after delay:', e));
+                    }, 1000);
                 });
             }
         });
