Update video source paths to use absolute paths and add fallback

--- a/welcome.html
+++ b/welcome.html
@@ -22,9 +22,10 @@
             loop 
             playsinline
             preload="auto"
-            poster="assets/logo.png.png"
+            poster="/assets/logo.png.png"
             style="width: 100%; height: 100%; object-fit: cover;"
         >
+            <source src="/assets/SPECTER VID3.mp4" type="video/mp4">
             <source src="assets/SPECTER VID3.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
