--- a/welcome.html
+++ b/welcome.html
@@ -15,13 +15,10 @@
 </head>
 <body class="welcome-page">
     <div class="video-background">
-        <iframe 
-            id="background-video"
-            src="https://www.youtube.com/embed/ZFi9qnHnRz4?autoplay=1&mute=1&loop=1&playlist=ZFi9qnHnRz4&controls=0&showinfo=0&rel=0&modestbranding=0&playsinline=1&enablejsapi=1&origin=https://spectral-ai.vercel.app&iv_load_policy=3&fs=0&color=white&playbackQuality=hd1080"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen
-        ></iframe>
+        <video autoplay muted loop playsinline>
+            <source src="https://res.cloudinary.com/dj4bqhskf/video/upload/v1743327771/SPECTER_VID3_s893bk.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
         <div class="video-overlay"></div>
     </div>
 
