Update social media links for Twitter and Telegram

--- a/welcome.html
+++ b/welcome.html
@@ -47,6 +47,14 @@
                     <span>About</span>
                 </a>
             </div>
+            <div class="social-icons">
+                <a href="https://x.com/spectrelai" target="_blank" rel="noopener noreferrer">
+                    <i class="fab fa-twitter"></i>
+                </a>
+                <a href="https://t.me/spectrelaii" target="_blank" rel="noopener noreferrer">
+                    <i class="fab fa-telegram"></i>
+                </a>
+            </div>
         </section>
     </main>
 
