--- a/welcome.html
+++ b/welcome.html
@@ -37,7 +37,7 @@
                 <p>All these features are accessible in one place — the Spectrel AI Search Engine, which is our flagship product.</p>
                 <div class="token-address">
                     <h3>$SPECAI Token Address</h3>
-                    <p class="coming-soon">Coming Soon</p>
+                    <p>BizPDzN8P3kBRsysgGKWZY6b2Pdoxi24vte2jxftpump</p>
                 </div>
             </div>
             <div class="welcome-buttons">
