--- a/welcome.html
+++ b/welcome.html
@@ -9,7 +9,7 @@
     <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://spectreai.io https://*.spectreai.io; frame-src 'self' https://spectreai.io https://*.spectreai.io https://www.youtube.com; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://spectreai.io https://*.spectreai.io; style-src 'self' 'unsafe-inline' https://spectreai.io https://*.spectreai.io https://fonts.googleapis.com https://cdnjs.cloudflare.com; font-src 'self' data: https://spectreai.io https://*.spectreai.io https://fonts.gstatic.com https://cdnjs.cloudflare.com; img-src 'self' data: https://spectreai.io https://*.spectreai.io; media-src 'self' data: blob: https://res.cloudinary.com; connect-src 'self' https://spectreai.io https://*.spectreai.io https://p2p.messier.app">
     <meta http-equiv="X-Content-Type-Options" content="nosniff">
     <meta http-equiv="Permissions-Policy" content="geolocation=(), microphone=(), camera=()">
-    <title>Spectrel AI</title>
+    <title>Spectle AI</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -28,13 +28,13 @@
     <main>
         <section class="welcome-section">
             <div class="welcome-header">
-                <img src="assets/logo.png.png" alt="Spectrel AI Logo" class="welcome-logo">
-                <h1>Welcome to Spectrel AI</h1>
+                <img src="assets/logo.png.png" alt="Spectle AI Logo" class="welcome-logo">
+                <h1>Welcome to Spectle AI</h1>
             </div>
             <div class="welcome-content">
                 <h2>Researching Blockchain Waves</h2>
-                <p>Spectrel AI is here to help you navigate the crypto market by offering a suite of Sentiment, Technical, and On-Chain tools powered by AI.</p>
-                <p>All these features are accessible in one place — the Spectrel AI Search Engine, which is our flagship product.</p>
+                <p>Spectle AI is here to help you navigate the crypto market by offering a suite of Sentiment, Technical, and On-Chain tools powered by AI.</p>
+                <p>All these features are accessible in one place — the Spectle AI Search Engine, which is our flagship product.</p>
                 <div class="token-address">
                     <h3>$SPECAI Token Address</h3>
                     <p class="coming-soon">Coming Soon</p>
@@ -62,7 +62,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Spectrel AI. All rights reserved.</p>
+        <p>&copy; 2025 Spectle AI. All rights reserved.</p>
     </footer>
 
     <script>
