Update token symbol from  to

--- a/welcome.html
+++ b/welcome.html
@@ -36,7 +36,7 @@
                 <p>Spectle AI is here to help you navigate the crypto market by offering a suite of Sentiment, Technical, and On-Chain tools powered by AI.</p>
                 <p>All these features are accessible in one place — the Spectle AI Search Engine, which is our flagship product.</p>
                 <div class="token-address">
-                    <h3>$SPECAI Token Address</h3>
+                    <h3>$SPCAI Token Address</h3>
                     <p class="coming-soon">Coming Soon</p>
                 </div>
             </div>
