Update all instances of Spectrel to Spectle in about.html

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
     <meta http-equiv="X-Content-Type-Options" content="nosniff">
     <meta http-equiv="Permissions-Policy" content="geolocation=(), microphone=(), camera=()">
-    <title>About - Spectrel AI</title>
+    <title>About - Spectle AI</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -36,35 +36,49 @@
 
     <main class="about-page">
         <section class="about-hero">
-            <h1>About Spectrel AI</h1>
-            <p class="about-subtitle">Empowering traders with AI-driven insights and advanced market analysis tools.</p>
+            <div class="about-header">
+                <img src="assets/logo.png.png" alt="Spectle AI Logo" class="about-logo">
+                <h1>About Spectle AI</h1>
+            </div>
+            <div class="about-content">
+                <p>Spectle AI is a cutting-edge platform that combines artificial intelligence with blockchain technology to provide comprehensive market analysis and insights.</p>
+                <p>Our mission is to empower traders and investors with advanced tools and data-driven insights to make informed decisions in the cryptocurrency market.</p>
+                <p>Spectle AI offers a suite of powerful features:</p>
+                <ul>
+                    <li>Sentiment Analysis</li>
+                    <li>Technical Analysis</li>
+                    <li>On-Chain Data Analysis</li>
+                    <li>AI-Powered Market Predictions</li>
+                </ul>
+                <p>All these features are accessible through our flagship product, the Spectle AI Search Engine.</p>
+            </div>
         </section>
 
         <section class="products-section">
-            <h2>What is Spectrel AI?</h2>
-            <p>Spectrel AI is a comprehensive platform that combines artificial intelligence with blockchain technology to provide advanced market analysis and trading insights. Our platform offers a suite of tools designed to help traders make informed decisions in the cryptocurrency market.</p>
+            <h2>What is Spectle AI?</h2>
+            <p>Spectle AI is a comprehensive platform that combines artificial intelligence with blockchain technology to provide advanced market analysis and trading insights. Our platform offers a suite of tools designed to help traders make informed decisions in the cryptocurrency market.</p>
 
             <h2>Our Products</h2>
-            <p class="section-intro">The Spectrel AI ecosystem consists of Web and Telegram tools. Our main product is the AI On-Chain Search Engine - an All-in-One, AI-powered Research Platform that integrates various tools, zone areas, and products:</p>
+            <p class="section-intro">The Spectle AI ecosystem consists of Web and Telegram tools. Our main product is the AI On-Chain Search Engine - an All-in-One, AI-powered Research Platform that integrates various tools, zone areas, and products:</p>
 
             <div class="product-grid">
                 <div class="product-card">
-                    <h3>Spectrel AI Search Engine</h3>
+                    <h3>Spectle AI Search Engine</h3>
                     <p>Our flagship product that provides real-time market analysis, sentiment analysis, and technical indicators powered by advanced AI algorithms.</p>
                 </div>
                 <div class="product-card">
-                    <h3>Spectrel AI Analytics</h3>
+                    <h3>Spectle AI Analytics</h3>
                     <p>Comprehensive market analytics and visualization tools to help you understand market trends and patterns.</p>
                 </div>
                 <div class="product-card">
-                    <h3>Spectrel AI Trading Signals</h3>
+                    <h3>Spectle AI Trading Signals</h3>
                     <p>AI-generated trading signals and alerts based on market analysis and predictive models.</p>
                 </div>
             </div>
         </section>
 
         <section class="team-section">
-            <h2>Spectrel AI Team</h2>
+            <h2>Spectle AI Team</h2>
             <div class="team-grid">
                 <div class="team-member">
                     <h3>Sunny</h3>
@@ -185,8 +199,8 @@
                     </div>
                     <ul>
                         <li>New Website Release</li>
-                        <li>UI Design of the Spectrel AI Search Engine</li>
-                        <li>Technical development of the Spectrel AI Search Engine V1</li>
+                        <li>UI Design of the Spectle AI Search Engine</li>
+                        <li>Technical development of the Spectle AI Search Engine V1</li>
                         <li>Sentiment Analysis Product</li>
                         <li>Technical Analysis Product</li>
                         <li>The Monarch: AI Chat Zone</li>
@@ -204,7 +218,7 @@
                         <li>Launch of the Monarch: AI ChatZone</li>
                         <li>Tiers, Token Gating Solutions and Subscriptions</li>
                         <li>Adoption Initiatives</li>
-                        <li>Deployment of Spectrel AI Utilities in Telegram</li>
+                        <li>Deployment of Spectle AI Utilities in Telegram</li>
                         <li>Continuous improvements to the AI Search Engine</li>
                     </ul>
                 </div>
@@ -216,7 +230,7 @@
                     </div>
                     <ul>
                         <li>Release of X Bubbles</li>
-                        <li>Development of Spectrel AI Dexscan</li>
+                        <li>Development of Spectle AI Dexscan</li>
                         <li>Spectral AI SocialFI App</li>
                         <li>Blockchain Scanning</li>
                         <li>Staking</li>
@@ -243,7 +257,7 @@
                         <h3>Phase 4: Integration and Adoption</h3>
                     </div>
                     <ul>
-                        <li>Expansion of the Spectrel AI Search Engine (2.0)</li>
+                        <li>Expansion of the Spectle AI Search Engine (2.0)</li>
                         <li>Spectral AI App on Apple Store and Android Google Store</li>
                         <li>More CEX Listings</li>
                         <li>Expanded Partnerships</li>
@@ -260,7 +274,7 @@
                         <h3>Phase 5: The Swan Release</h3>
                     </div>
                     <ul>
-                        <li>Spectrel AI Search Engine 3.0 Release</li>
+                        <li>Spectle AI Search Engine 3.0 Release</li>
                         <li>Advanced Technical and Sentiment Analysis Integration for Spot and Leverage Trading</li>
                         <li>Web 3 Accelerator Program</li>
                         <li>Quant Fund adoption</li>
@@ -271,7 +285,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Spectrel AI. All rights reserved.</p>
+        <p>&copy; 2025 Spectle AI. All rights reserved.</p>
     </footer>
 
     <script>
