--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
     <main class="about-page">
         <section class="about-hero">
             <div class="about-header">
-                <img src="assets/logo.png.png" alt="Spectle AI Logo" class="about-logo">
+                <img src="assets/logo.png" alt="Spectle AI Logo" class="about-logo">
                 <h1>About Spectle AI</h1>
             </div>
             <div class="about-content">
