--- a/welcome.html
+++ b/welcome.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link rel="icon" type="image/png" href="assets/logo.png.png">
-    <link rel="apple-touch-icon" href="assets/logo.png.png">
+    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="apple-touch-icon" href="assets/logo.png">
     <meta name="theme-color" content="#000000">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://spectreai.io https://*.spectreai.io; frame-src 'self' https://spectreai.io https://*.spectreai.io https://www.youtube.com; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://spectreai.io https://*.spectreai.io; style-src 'self' 'unsafe-inline' https://spectreai.io https://*.spectreai.io https://fonts.googleapis.com https://cdnjs.cloudflare.com; font-src 'self' data: https://spectreai.io https://*.spectreai.io https://fonts.gstatic.com https://cdnjs.cloudflare.com; img-src 'self' data: https://spectreai.io https://*.spectreai.io; media-src 'self' data: blob: https://res.cloudinary.com; connect-src 'self' https://spectreai.io https://*.spectreai.io https://p2p.messier.app">
     <meta http-equiv="X-Content-Type-Options" content="nosniff">
@@ -28,7 +28,7 @@
     <main>
         <section class="welcome-section">
             <div class="welcome-header">
-                <img src="assets/logo.png.png" alt="Spectle AI Logo" class="welcome-logo">
+                <img src="assets/logo.png" alt="Spectle AI Logo" class="welcome-logo">
                 <h1>Welcome to Spectle AI</h1>
             </div>
             <div class="welcome-content">
