Update social media links to correct URLs

--- a/welcome.html
+++ b/welcome.html
@@ -51,10 +51,10 @@
                 </a>
             </div>
             <div class="social-icons">
-                <a href="https://x.com/spectrelai" target="_blank" rel="noopener noreferrer">
+                <a href="https://x.com/spectleai" target="_blank" rel="noopener noreferrer">
                     <i class="fab fa-twitter"></i>
                 </a>
-                <a href="https://t.me/spectrelaii" target="_blank" rel="noopener noreferrer">
+                <a href="https://t.me/spectleai" target="_blank" rel="noopener noreferrer">
                     <i class="fab fa-telegram"></i>
                 </a>
             </div>
