Change token address back to Coming Soon

--- a/welcome.html
+++ b/welcome.html
@@ -37,7 +37,7 @@
                 <p>All these features are accessible in one place — the Spectle AI Search Engine, which is our flagship product.</p>
                 <div class="token-address">
                     <h3>$SPCAI Token Address</h3>
-                    <p>AtS3bSnmNot9bXbW7uWPtg55GFPmboaHcR9tG9Pipump</p>
+                    <p class="coming-soon">Coming Soon</p>
                 </div>
             </div>
             <div class="welcome-buttons">
